--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -151,8 +151,8 @@
       <dependencies>
         <dependency>
           <groupId>com.oracle</groupId>
-          <artifactId>ojdbc5</artifactId>
-          <version>11.1.0.7.0</version>
+          <artifactId>ojdbc6</artifactId>
+          <version>11.1.0.7</version>
           <scope>test</scope>
         </dependency>
       </dependencies>
@@ -168,8 +168,42 @@
       <dependencies>
         <dependency>
           <groupId>com.oracle</groupId>
-          <artifactId>ojdbc5</artifactId>
-          <version>11.1.0.7.0</version>
+          <artifactId>ojdbc6</artifactId>
+          <version>11.1.0.7</version>
+          <scope>test</scope>
+        </dependency>
+      </dependencies>
+    </profile>
+    <profile>
+      <id>hudson-oracle11R2</id>
+      <activation>
+        <property>
+          <name>dataSourceName</name>
+          <value>oracle11R2</value>
+        </property>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>com.oracle</groupId>
+          <artifactId>ojdbc6</artifactId>
+          <version>11.2.0.2.0</version>
+          <scope>test</scope>
+        </dependency>
+      </dependencies>
+    </profile>
+    <profile>
+      <id>hudson-oracle11R2-RAC</id>
+      <activation>
+        <property>
+          <name>dataSourceName</name>
+          <value>oracle11R2-RAC</value>
+        </property>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>com.oracle</groupId>
+          <artifactId>ojdbc6</artifactId>
+          <version>11.2.0.2.0</version>
           <scope>test</scope>
         </dependency>
       </dependencies>
@@ -189,7 +223,7 @@
         <dependency>
           <groupId>com.sybase</groupId>
           <artifactId>jconnect</artifactId>
-          <version>6.0.5</version>
+          <version>7_26502</version>
           <scope>test</scope>
         </dependency>
       </dependencies>
@@ -206,7 +240,7 @@
         <dependency>
           <groupId>com.sybase</groupId>
           <artifactId>jconnect</artifactId>
-          <version>6.0.5</version>
+          <version>7_26502</version>
           <scope>test</scope>
         </dependency>
       </dependencies>
@@ -223,7 +257,24 @@
         <dependency>
           <groupId>com.sybase</groupId>
           <artifactId>jconnect</artifactId>
-          <version>6.0.5</version>
+          <version>7_26502</version>
+          <scope>test</scope>
+        </dependency>
+      </dependencies>
+    </profile>
+    <profile>
+      <id>hudson-sybase-15-5</id>
+      <activation>
+        <property>
+          <name>dataSourceName</name>
+          <value>sybase-15-5</value>
+        </property>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>com.sybase</groupId>
+          <artifactId>jconnect</artifactId>
+          <version>7_26502</version>
           <scope>test</scope>
         </dependency>
       </dependencies>
@@ -266,15 +317,17 @@
         <dependency>
           <groupId>com.ibm</groupId>
           <artifactId>db2jcc</artifactId>
-          <version>3.8.47</version>
+          <version>9.7</version>
           <scope>test</scope>
         </dependency>
+        <!--
         <dependency>
           <groupId>com.ibm</groupId>
           <artifactId>db2jcc_license_cu</artifactId>
-          <version>3.8.47</version>
+          <version>9.1</version>
           <scope>test</scope>
         </dependency>
+        -->
       </dependencies>
     </profile>
 
@@ -290,9 +343,9 @@
       </activation>
       <dependencies>
         <dependency>
-          <groupId>com.microsoft.sqlserver</groupId>
-          <artifactId>msjdbc</artifactId>
-          <version>2.0.1008.2</version>
+          <groupId>com.microsoft</groupId>
+          <artifactId>sqljdbc</artifactId>
+          <version>3.0</version>
           <scope>test</scope>
         </dependency>
       </dependencies>
@@ -307,53 +360,85 @@
       </activation>
       <dependencies>
         <dependency>
-          <groupId>com.microsoft.sqlserver</groupId>
-          <artifactId>msjdbc</artifactId>
-          <version>2.0.1008.2</version>
+          <groupId>com.microsoft</groupId>
+          <artifactId>sqljdbc</artifactId>
+          <version>3.0</version>
           <scope>test</scope>
         </dependency>
+      </dependencies>
+    </profile>
+    <profile>
+      <id>hudson-sqlserver2008R2</id>
+      <activation>
+        <property>
+          <name>dataSourceName</name>
+          <value>sqlserver2008R2</value>
+        </property>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>com.microsoft</groupId>
+          <artifactId>sqljdbc</artifactId>
+          <version>3.0.1301.101</version>
+          <scope>test</scope>
+        </dependency>
+
       </dependencies>
     </profile>
 
     <!--PostgreSQL-->
 
     <profile>
-      <id>hudson-postgresql8-2-4</id>
+      <id>hudson-postgresql8-2-17</id>
       <activation>
         <property>
           <name>dataSourceName</name>
-          <value>postgresql8-2-4</value>
+          <value>postgresql8-2-17</value>
         </property>
       </activation>
       <dependencies>
         <dependency>
           <groupId>postgresql</groupId>
           <artifactId>postgresql</artifactId>
-          <version>8.2-504</version>
-          <classifier>jdbc3</classifier>
+          <version>8.2-511</version>
           <scope>test</scope>
         </dependency>
       </dependencies>
     </profile>
-
     <profile>
-      <id>hudson-postgresql8-3-7</id>
+      <id>hudson-postgresql8-3-11</id>
       <activation>
         <property>
           <name>dataSourceName</name>
-          <value>postgresql8-3-7</value>
+          <value>postgresql8-3-11</value>
         </property>
       </activation>
       <dependencies>
         <dependency>
           <groupId>postgresql</groupId>
           <artifactId>postgresql</artifactId>
-          <version>8.3-604</version>
-          <classifier>jdbc3</classifier>
+          <version>8.3-606</version>
           <scope>test</scope>
         </dependency>
       </dependencies>
     </profile>
+    <profile>
+      <id>hudson-postgresql8-4-7</id>
+      <activation>
+        <property>
+          <name>dataSourceName</name>
+          <value>postgresql8-4-7</value>
+        </property>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>postgresql</groupId>
+          <artifactId>postgresql</artifactId>
+          <version>8.4-703</version>
+          <scope>test</scope>
+        </dependency>
+      </dependencies>
+     </profile>
 
     <!--MySQL-->
 
@@ -386,6 +471,23 @@
         <dependency>
           <groupId>mysql</groupId>
           <artifactId>mysql-connector-java</artifactId>
+          <version>5.0.17</version>
+          <scope>test</scope>
+        </dependency>
+      </dependencies>
+    </profile>
+    <profile>
+      <id>hudson-mysql5-0-79-2JDBC3</id>
+      <activation>
+        <property>
+          <name>dataSourceName</name>
+          <value>mysql5-0-79-2JDBC3</value>
+        </property>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
           <version>5.0.8</version>
           <scope>test</scope>
         </dependency>
@@ -403,7 +505,24 @@
         <dependency>
           <groupId>mysql</groupId>
           <artifactId>mysql-connector-java</artifactId>
-          <version>5.1.7</version>
+          <version>5.1.15</version>
+          <scope>test</scope>
+        </dependency>
+      </dependencies>
+    </profile>
+    <profile>
+      <id>hudson-mysql5-5</id>
+      <activation>
+        <property>
+          <name>dataSourceName</name>
+          <value>mysql5-5</value>
+        </property>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>5.1.15</version>
           <scope>test</scope>
         </dependency>
       </dependencies>
@@ -499,28 +618,20 @@
   </profiles>
   
   <repositories>
-    <repository>
-      <id>repository.jboss.org</id>
-      <name>JBoss Repository</name>
-      <layout>default</layout>
-      <url>http://repository.jboss.org/maven2</url>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository>
-
-    <repository>
-      <id>snapshots.jboss.org</id>
-      <name>JBoss Snapshots Repository</name>
-      <layout>default</layout>
-      <url>http://snapshots.jboss.org/maven2</url>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-    </repository>
+     <repository>
+        <id>jboss</id>
+        <name>JBoss Public Maven Repository Group</name>
+        <url>https://repository.jboss.org/nexus/content/groups/public/</url>
+        <layout>default</layout>
+        <releases>
+           <enabled>true</enabled>
+           <updatePolicy>never</updatePolicy>
+        </releases>
+        <snapshots>
+           <enabled>true</enabled>
+           <updatePolicy>never</updatePolicy>
+        </snapshots>
+     </repository>
   </repositories>
   
   <dependencyManagement>
@@ -535,8 +646,8 @@
   </dependencyManagement>
 
   <scm>
-    <connection>scm:svn:http://anonsvn.jboss.org/repos/maven/poms/jboss-parent-pom/tags/1.3.0.Alpha01</connection>
-    <developerConnection>scm:svn:https://svn.jboss.org/repos/maven/poms/jboss-parent-pom/tags/1.3.0.Alpha01</developerConnection>
-    <url>http://anonsvn.jboss.org/repos/maven/poms/jboss-parent-pom/tags/1.3.0.Alpha01</url>
+    <connection>scm:git:git://github.com/picketlink/picketlink-idm.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com/picketlink/picketlink-idm.git</developerConnection>
+    <url>https://github.com/picketlink/picketlink-idm</url>
   </scm>
 </project>
