--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -18,10 +18,34 @@
 
     <dependencies>
         <dependency>
-	          <groupId>org.jboss.picketlink</groupId>
-	          <artifactId>picketlink-idm-api</artifactId>
-	      </dependency>
+           <groupId>org.jboss.picketlink</groupId>
+           <artifactId>picketlink-idm-api</artifactId>
+       </dependency>
+        <dependency>
+           <groupId>junit</groupId>
+           <artifactId>junit</artifactId>
+           <version>4.8.1</version>
+           <scope>test</scope>
+       </dependency>
+       <dependency>
+           <groupId>org.picketbox</groupId>
+           <artifactId>picketbox-ldap</artifactId>    
+           <version>1.0.0.Final</version>
+           <scope>test</scope>
+       </dependency>
+       <dependency>
+           <groupId>org.picketbox</groupId>
+           <artifactId>picketbox-ldap</artifactId>    
+           <version>1.0.0.Final</version>
+           <scope>test</scope>
+           <type>test-jar</type>
+       </dependency>
+       <dependency>
+           <groupId>org.slf4j</groupId>
+           <artifactId>slf4j-simple</artifactId>
+           <version>1.5.6</version>
+           <scope>test</scope>
+       </dependency>
     </dependencies>
-
 
 </project>
