--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -1,51 +1,74 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-
-    <parent>
-        <groupId>org.jboss.picketlink</groupId>
-        <artifactId>picketlink-idm-parent</artifactId>
-        <version>2.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
-    </parent>
-
-    <groupId>org.jboss.picketlink</groupId>
-    <artifactId>picketlink-idm-impl</artifactId>
-    <version>2.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
-
-    <name>PicketLink Identity Management Implementation</name>
-
-    <dependencies>
-        <dependency>
-           <groupId>org.jboss.picketlink</groupId>
-           <artifactId>picketlink-idm-api</artifactId>
-       </dependency>
-        <dependency>
-           <groupId>junit</groupId>
-           <artifactId>junit</artifactId>
-           <version>4.8.1</version>
-           <scope>test</scope>
-       </dependency>
-       <dependency>
-           <groupId>org.picketbox</groupId>
-           <artifactId>picketbox-ldap</artifactId>    
-           <version>1.0.0.Final</version>
-           <scope>test</scope>
-       </dependency>
-       <dependency>
-           <groupId>org.picketbox</groupId>
-           <artifactId>picketbox-ldap</artifactId>    
-           <version>1.0.0.Final</version>
-           <scope>test</scope>
-           <type>test-jar</type>
-       </dependency>
-       <dependency>
-           <groupId>org.slf4j</groupId>
-           <artifactId>slf4j-simple</artifactId>
-           <version>1.5.6</version>
-           <scope>test</scope>
-       </dependency>
-    </dependencies>
-
+<project
+	xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.jboss.picketlink</groupId>
+		<artifactId>picketlink-idm-parent</artifactId>
+		<version>2.0-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
+	</parent>
+	<groupId>org.jboss.picketlink</groupId>
+	<artifactId>picketlink-idm-impl</artifactId>
+	<version>2.0-SNAPSHOT</version>
+	<packaging>jar</packaging>
+	<name>PicketLink Identity Management Implementation</name>
+	<dependencies>
+		<dependency>
+			<groupId>org.jboss.picketlink</groupId>
+			<artifactId>picketlink-idm-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.8.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.picketbox</groupId>
+			<artifactId>picketbox-ldap</artifactId>
+			<version>1.0.0.Final</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.picketbox</groupId>
+			<artifactId>picketbox-ldap</artifactId>
+			<version>1.0.0.Final</version>
+			<scope>test</scope>
+			<type>test-jar</type>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.5.6</version>
+			<scope>test</scope>
+		</dependency>
+		<!-- JPA Identity Store Dependencies -->
+		<dependency>
+			<groupId>org.hibernate.javax.persistence</groupId>
+			<artifactId>hibernate-jpa-2.0-api</artifactId>
+			<version>1.0.1.Final</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.3.161</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.mchange</groupId>
+			<artifactId>c3p0</artifactId>
+			<version>0.9.2-pre4</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>3.6.6.Final</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 </project>
