--- a/pom.xml
+++ b/pom.xml
@@ -29,4 +29,74 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <build>
+        <plugins>
+	    <plugin>
+	        <groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-release-plugin</artifactId>
+		<version>2.2.1</version>
+		<configuration>
+		    <arguments>-Drelease </arguments>
+		    <autoVersionSubmodules>true</autoVersionSubmodules>
+		</configuration>
+	    </plugin>
+
+	    <plugin>
+	        <groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-deploy-plugin</artifactId>
+		<version>2.6</version>
+	    </plugin>
+
+	    <plugin>
+	        <groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-install-plugin</artifactId>
+		<version>2.3.1</version>
+	    </plugin>
+
+	    <plugin>
+	        <groupId>org.sonatype.plugins</groupId>
+		<artifactId>nexus-maven-plugin</artifactId>
+		<version>1.7</version>
+		<configuration>
+		    <auto>true</auto>
+		    <nexusUrl>https://repository.jboss.org/nexus</nexusUrl>
+		    <serverAuthId>jboss-releases-repository</serverAuthId>
+		</configuration>
+	    </plugin>
+
+	</plugins>
+    </build>
+
+    <profiles>
+        <profile>
+	    <id>distribution</id>
+	    <activation>
+	        <property>
+		    <name>release</name>
+		</property>
+            </activation>
+        </profile>
+    </profiles>
+
+    <scm>
+        <connection>scm:git:git://github.com/picketlink/picketlink-idm.git</connection>
+	<developerConnection>scm:git:git@github.com:picketlink/picketlink-idm.git</developerConnection>
+	<url>http://github.com/picketlink/picketlink-idm</url>
+    </scm>
+
+    <distributionManagement>
+        <repository>
+	    <id>jboss-releases-repository</id>
+	    <name>JBoss Releases Repository</name>
+	    <url>${jboss.releases.repo.url}</url>
+	</repository>
+
+	<snapshotRepository>
+	    <id>jboss-snapshots-repository</id>
+	    <name>JBoss Snapshots Repository</name>
+	    <url>${jboss.snapshots.repo.url}</url>
+	</snapshotRepository>
+    </distributionManagement>
+
 </project>
