--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,12 @@
 
     <name>PicketLink Identity Management</name>
 
+    <properties>
+        <jboss.releases.repo.url>https://repository.jboss.org/nexus/service/local/staging/deploy/maven2/</jboss.releases.repo.url>
+        <jboss.snapshots.repo.url>https://repository.jboss.org/nexus/content/repositories/snapshots/</jboss.snapshots.repo.url>
+        <maven.build.timestamp.format>yyyyMMdd-HHmm</maven.build.timestamp.format>
+    </properties>
+
     <modules>
         <module>api</module>
         <module>impl</module>
