--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,38 @@
 
     <name>PicketLink Identity Management</name>
 
+    <description>
+        PicketLink IDM (Identity Management), a library for the management of users, groups and roles.
+    </description>
+
+    <url>http://www.jboss.org/picketlink</url>
+
+    <licenses>
+        <license>
+	    <name>Apache License, Version 2.0</name>
+	    <distribution>repo</distribution>
+	    <url>http://www.apache.org/licenses/LICENSE-2.0</url>
+	</license>
+    </licenses>
+
+    <developers>
+        <developer>
+	    <name>Shane Bryzak</name>
+	</developer>
+
+	<developer>
+	    <name>Boleslaw Dawidowicz</name>
+	</developer>
+
+	<developer>
+	    <name>Anil Saldhana</name>
+	</developer>
+
+	<developer>
+	    <name>Pedro Igor Silva</name>
+	</developer>
+    </developers>
+
     <properties>
         <jboss.releases.repo.url>https://repository.jboss.org/nexus/service/local/staging/deploy/maven2/</jboss.releases.repo.url>
         <jboss.snapshots.repo.url>https://repository.jboss.org/nexus/content/repositories/snapshots/</jboss.snapshots.repo.url>
