--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -4,12 +4,12 @@
    <parent>
       <groupId>org.jboss.picketlink</groupId>
       <artifactId>picketlink-idm-parent</artifactId>
-      <version>2.0-SNAPSHOT</version>
+      <version>2.0-20120910</version>
       <relativePath>../pom.xml</relativePath>
    </parent>
    <groupId>org.jboss.picketlink</groupId>
    <artifactId>picketlink-idm-impl</artifactId>
-   <version>2.0-SNAPSHOT</version>
+   <version>2.0-20120910</version>
    <packaging>jar</packaging>
    <name>PicketLink Identity Management Implementation</name>
         <build>
