--- a/picketlink-idm-hibernate/pom.xml
+++ b/picketlink-idm-hibernate/pom.xml
@@ -38,29 +38,30 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.picketlink.idm</groupId>
+      <artifactId>picketlink-idm-cache</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
+
     <!-- hibernate -->
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
-      <version>4.1.6.Final</version>
     </dependency>
-
-
 
     <!-- Hibernate logging set up -->
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
-      <version>1.6.1</version>
     </dependency>
-
 
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
-
 
   </dependencies>
 
