remove hibernate version from testsuite, make it compile with jdk1.7

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -43,7 +43,7 @@
         <configuration>
           <source>1.5</source>
           <target>1.5</target>
-          <showDeprecation>true</showDeprecation>
+          <showDeprecation>false</showDeprecation>
           <showWarnings>true</showWarnings>
           <optimize>true</optimize>
         </configuration>
