--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -546,6 +546,11 @@
         <version>4.1.6.Final</version>
       </dependency>
       <dependency>
+        <groupId>org.hibernate.common</groupId>
+        <artifactId>hibernate-commons-annotations</artifactId>
+        <version>4.0.1.Final</version>
+      </dependency>
+      <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-log4j12</artifactId>
         <version>1.6.1</version>
