--- a/picketlink-idm-testsuite/performance/pom.xml
+++ b/picketlink-idm-testsuite/performance/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <groupId>org.picketlink.idm</groupId>
     <artifactId>picketlink-idm-parent</artifactId>
-    <version>1.4.0.M03-SNAPSHOT</version>
+    <version>1.4.0.M03</version>
     <relativePath>../../parent</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
