--- a/picketlink-idm-ldap/pom.xml
+++ b/picketlink-idm-ldap/pom.xml
@@ -42,6 +42,10 @@
     </dependency>
 
     <dependency>
+      <groupId>org.infinispan</groupId>
+      <artifactId>infinispan-tree</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.staxnav</groupId>
       <artifactId>staxnav.core</artifactId>
       <version>0.9.0</version>
