--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -608,8 +608,8 @@
       </dependency>
       <dependency>
         <groupId>org.infinispan</groupId>
-        <artifactId>infinispan-tree</artifactId>
-        <version>5.1.7.Final</version>
+        <artifactId>infinispan-core</artifactId>
+        <version>5.2.6.Final</version>
       </dependency>
       <dependency>
         <groupId>junit</groupId>
