--- a/picketlink-idm-cache/pom.xml
+++ b/picketlink-idm-cache/pom.xml
@@ -29,7 +29,7 @@
     </dependency>
      <dependency>
        <groupId>org.infinispan</groupId>
-       <artifactId>infinispan-tree</artifactId>
+       <artifactId>infinispan-core</artifactId>
      </dependency>
 
      <dependency>
