--- a/picketlink-idm-ldap/pom.xml
+++ b/picketlink-idm-ldap/pom.xml
@@ -43,7 +43,7 @@
 
     <dependency>
       <groupId>org.infinispan</groupId>
-      <artifactId>infinispan-tree</artifactId>
+      <artifactId>infinispan-core</artifactId>
     </dependency>
     <dependency>
       <groupId>org.staxnav</groupId>
