--- a/picketlink-idm-docs/ReferenceGuide/pom.xml
+++ b/picketlink-idm-docs/ReferenceGuide/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <groupId>org.picketlink.idm</groupId>
     <artifactId>picketlink-idm-parent</artifactId>
-    <version>1.4.2.CR02-SNAPSHOT</version>
+    <version>1.4.2.CR02</version>
     <relativePath>../../parent</relativePath>
   </parent>
 
