--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>org.picketlink.idm</groupId>
     <artifactId>picketlink-idm-parent</artifactId>
-    <version>1.4.4.Final-SNAPSHOT</version>
+    <version>1.4.4.Final</version>
     <relativePath>../parent</relativePath>
   </parent>
 
