--- a/integration/jboss5/pom.xml
+++ b/integration/jboss5/pom.xml
@@ -10,7 +10,7 @@
   <parent>
     <groupId>org.picketlink.idm</groupId>
     <artifactId>picketlink-idm-integration</artifactId>
-    <version>1.4.4.Final-SNAPSHOT</version>
+    <version>1.4.4.Final</version>
   </parent>
 
   <dependencies>
