--- a/picketlink-idm-testsuite/integration/pom.xml
+++ b/picketlink-idm-testsuite/integration/pom.xml
@@ -2,7 +2,7 @@
  <parent>
     <groupId>org.picketlink.idm</groupId>
     <artifactId>picketlink-idm-parent</artifactId>
-    <version>1.4.4.Final</version>
+    <version>1.4.5.Final-SNAPSHOT</version>
     <relativePath>../../parent</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
