--- a/example/idm-servlet/pom.xml
+++ b/example/idm-servlet/pom.xml
@@ -3,7 +3,7 @@
     <groupId>org.jboss</groupId>
     <artifactId>jboss-idm-servlet</artifactId>
     <packaging>war</packaging>
-    <version>1.4.5.Final-SNAPSHOT</version>
+    <version>1.4.5.Final</version>
     <name>JBoss Picketlink IDM servlet</name>
     <url>http://maven.apache.org</url>
 
