--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -12,7 +12,7 @@
   <parent>
     <groupId>org.picketlink.idm</groupId>
     <artifactId>picketlink-idm-parent</artifactId>
-    <version>1.4.5.Final</version>
+    <version>1.4.6.Final-SNAPSHOT</version>
     <relativePath>../parent/pom.xml</relativePath>
   </parent>
 
