--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <groupId>org.picketlink.idm</groupId>
     <artifactId>picketlink-idm-parent</artifactId>
-    <version>1.4.6.Final-SNAPSHOT</version>
+    <version>1.4.6.Final</version>
     <relativePath>parent</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -17,7 +17,8 @@
       <connection>scm:git:git://github.com/picketlink/picketlink-idm.git</connection>
       <developerConnection>scm:git:ssh://git@github.com/picketlink/picketlink-idm.git</developerConnection>
       <url>https://github.com/picketlink/picketlink-idm</url>
-   </scm>
+     <tag>1.4.6.Final</tag>
+  </scm>
 
 
   <profiles>
