--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -8,7 +8,7 @@
   <groupId>org.picketlink.idm</groupId>
   <artifactId>picketlink-idm-parent</artifactId>
   <packaging>pom</packaging>
-  <version>1.4.6.Final</version>
+  <version>1.4.7.Final-SNAPSHOT</version>
   <name>PicketLink IDM- Parent</name>
   <description>PicketLink is a cross-cutting project that handles identity  needs for the JEMS projects</description>
   <licenses>
@@ -638,6 +638,6 @@
     <connection>scm:git:git://github.com/picketlink/picketlink-idm.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/picketlink/picketlink-idm.git</developerConnection>
     <url>https://github.com/picketlink/picketlink-idm</url>
-    <tag>1.4.6.Final</tag>
+    <tag>HEAD</tag>
   </scm>
 </project>
